<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignmentDetailAcitivity">


    <TextView
        android:id="@+id/details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="76dp"
        android:text="@string/label_detail"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:maxWidth="170dp"
        android:text="@string/label_deadline"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/details_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/details_label"
        app:layout_constraintTop_toTopOf="@+id/details_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/details_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/label_course"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/details_topic"
        app:layout_constraintStart_toEndOf="@+id/details_topic"
        app:layout_constraintTop_toTopOf="@+id/details_topic"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/details_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_label" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_course" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="269dp"
        android:layout_height="145dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/label_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/label_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_description" />
</androidx.constraintlayout.widget.ConstraintLayout>